--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <a href="https://github.com/kanishka2003"><i class="fa-brands fa-github"></i></a>
         
         </div>
-        <a href="kani2-cv.jpg" download class="btn btn2">Download CV</a>
+        <a href="kanish_cv.jpg" download class="btn btn2">Download CV</a>
       </div>
       <div class="contact-right">
         <form name="submit-to-google-sheet">
