--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </nav>
 <div class="row2">
 <div class="header-text-1">
-<p>Full Stack Designer</p>
+<p>Full Stack Developer</p>
 <h1>I'm a <span>WEB DEVELOPER</span><br>  and website hoster in <b>AWS CLOUD S3</b>service.</h1>
 
 </div>
@@ -182,7 +182,7 @@
     </div>
   </div>
   <div class="copyright">
-    <p>Copyright    <i class="fa-regular fa-copyright"></i>  KANISHKA RAJENDRAN <i class="fa-solid fa-heart"></i>. </p>
+    <p>Copyright    <i class="fa-regular fa-copyright"></i>  KANISHKA RAJENDRAN <i class="fa-solid fa-heart"></i> </p>
   </div>
 </div>
 
