--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="row2">
 <div class="header-text-1">
 <p>Full Stack Developer</p>
-<h1>I'm a <span>WEB DEVELOPER</span><br>  and website hoster in <b>AWS CLOUD S3</b>service.</h1>
+<h1>I'm a <span>SOFTWARE DEVELOPER </span><br>  and website hoster in <b>AWS CLOUD S3</b>service.</h1>
 
 </div>
 <div class="header-text-2">
@@ -56,26 +56,26 @@
 </div>
 <div class="tab-contents active-tab" id="skills">
 <ul>
-<li><span>HTML</span><br>Buliding a web page structure.</li>
-<li><span>CSS</span><br>Design the web page  using css style.</li>
 <li><span>JAVA</span><br>Provide a programming solution to the problem.</li>
+<li><span>JAVASCRIPT</span><br>Provide interactive webpages.</li>
+<li><span>SQL</span><br>Design for managing and manipulating data stored in relational database.</li>
+
 </ul>
 </div>
 <div class="tab-contents" id="education">
 <ul>
 <li><span>2024</span><br>B-TECH in Information Technolog from Government college of engineering,Erode</li>
 <li><span> 2020</span><br>HSC from Little Flower Metriculation Hr Sec School, Sathy</li>
-<li><span>2018</span><br>SSLC from GOVERNMENT HIGH SCHOOL, Chikkarasampalayam</li>
+<li><span>2018</span><br>SSLC from Government High School, Chikkarasampalayam</li>
 </ul>
 </div>
 <div class="tab-contents" id="certification">
   <ul>
+     <li><span>Java full Stack - Intership</span><br>Certified from shiash info solutions private limited</li>
   <li><span>Cloud Computing and Network
     Administrator -Intership</span><br>Certified from Sharadha skill Academy
     (KG Group)
     </li>
-  <li><span> Creative thinking -Workshop</span><br>Certified from kurukshetra in Anna
-    university</li>
   <li><span>Java Data Structures for
     Begineers -Course</span><br>Certified from Great Learning</li>
   </ul>
@@ -167,7 +167,7 @@
           <a href="https://github.com/kanishka2003"><i class="fa-brands fa-github"></i></a>
         
         </div>
-        <a href="R_Kanish_CV.jpg" download class="btn btn2">Download CV</a>
+        <a href="R_KANISHKA.jpg" download class="btn btn2">Download CV</a>
       </div>
       <div class="contact-right">
         <form name="submit-to-google-sheet">
